added install screen for PWA

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "Controle de Presença",
-	"short_name": "Presença",
+	"name": "Arrivus",
+	"short_name": "Arrivus",
 	"icons": [
 		{
 			"src": "/static/images/icon-192x192.png",
